Fixed CSS layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ header{
 }
 
 .nav-links a:hover,
-.nav-links .active{
+.nav-links a.active{
     color:#38bdf8;
 }
 
@@ -64,8 +64,7 @@ header{
     align-items:center;
     text-align:center;
     padding:120px 20px 50px;
-    background:
-    radial-gradient(circle at top left,#1e3a8a,#0f172a);
+    background:radial-gradient(circle at top left,#1e3a8a,#0f172a);
 }
 
 .hero-content{
@@ -108,6 +107,8 @@ header{
     border-radius:10px;
     text-decoration:none;
     transition:0.3s;
+    border:none;
+    cursor:pointer;
 }
 
 .btn:hover{
@@ -117,6 +118,22 @@ header{
 .btn-secondary{
     background:transparent;
     border:2px solid #38bdf8;
+}
+
+.page-header{
+    padding:150px 8% 80px;
+    text-align:center;
+    background:radial-gradient(circle at top right,#1e40af,#0f172a);
+}
+
+.page-header h1{
+    font-size:55px;
+    margin-bottom:15px;
+}
+
+.page-header p{
+    color:#cbd5e1;
+    font-size:18px;
 }
 
 .section{
@@ -152,55 +169,6 @@ header{
 .card h3{
     margin-bottom:15px;
     color:#38bdf8;
-}
-
-footer{
-    text-align:center;
-    padding:30px;
-    background:#020617;
-}
-
-@media(max-width:768px){
-
-    .hero h1{
-        font-size:50px;
-    }
-
-    .hero h2{
-        font-size:25px;
-    }
-
-    .hero-desc{
-        font-size:16px;
-    }
-
-    .navbar{
-        flex-direction:column;
-        gap:20px;
-    }
-
-    .nav-links{
-        flex-wrap:wrap;
-        justify-content:center;
-    }
-
-    .hero-buttons{
-        flex-direction:column;
-    }
-    .page-header{
-    padding:150px 8% 80px;
-    text-align:center;
-    background:radial-gradient(circle at top right,#1e40af,#0f172a);
-}
-
-.page-header h1{
-    font-size:55px;
-    margin-bottom:15px;
-}
-
-.page-header p{
-    color:#cbd5e1;
-    font-size:18px;
 }
 
 .skills-box{
@@ -243,4 +211,41 @@ footer{
     height:140px;
     resize:none;
 }
+
+footer{
+    text-align:center;
+    padding:30px;
+    background:#020617;
+}
+
+@media(max-width:768px){
+    .navbar{
+        flex-direction:column;
+        gap:20px;
+    }
+
+    .nav-links{
+        flex-wrap:wrap;
+        justify-content:center;
+    }
+
+    .hero h1{
+        font-size:50px;
+    }
+
+    .hero h2{
+        font-size:25px;
+    }
+
+    .hero-desc{
+        font-size:16px;
+    }
+
+    .hero-buttons{
+        flex-direction:column;
+    }
+
+    .page-header h1{
+        font-size:38px;
+    }
 }
